# pytorch-training-pipeline

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .gitignore  LICENCE.txt  pyproject.toml  requirements.txt  setup.py
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/: __init__.py  __main__.py
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/commands/: __init__.py  app.py  export.py  infer.py  test.py  train.py
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/core/nn/: __init__.py  base.py  base_model.py
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/training/: __init__.py  config.py
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/training/dataloader/: __init__..py  registry.py
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/training/dataset/: __init__.py  dataset.py  registry.py
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/training/loss/: __init__.py  loss.py  registry.py
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/training/optimizer/: __init__.py  registry.py
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/training/wrapper/: __init__.py  base_wrapper.py  wrapper.py
